Compilador/src/Foo/Compilador.java
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
package Foo;

public class Compilador implements CompiladorConstants {

  // Error sintactico personalizado para el compilador
  public static void errorSintactico(ParseException e) {
      System.out.println(" ERROR SINTACTICO (< " + e.currentToken.beginLine + " , "
                                                  + e.currentToken.beginColumn + " >): "
                                                  + " detectado token incorrecto: " + e.currentToken.next + "\u005cn");
  }

  public static void main(String args []) throws ParseException
  {
    /* nombre del fichero */

        String nombreArchivo;
        String path = "C:\u005c\u005cUsers\u005c\u005cGord\u005c\u005cDesktop\u005c\u005cprogramas\u005c\u005c";


        if (args[0].equals("-v")) {
                System.out.println("Compilacion en modo verbose");
                nombreArchivo = args[1];
        }
        else {
            System.out.println("Compilacion sin modo verbose");
            nombreArchivo = args[0];
    }

        /* Completar la ruta del path */
        path += nombreArchivo;


    System.out.println("LEYENDO FICHERO " + nombreArchivo + "\u005cn");
    try
    {
      /* Crear el parser con respecto al fichero */
      Compilador parser = new Compilador (new java.io.FileInputStream(path));
      int res = Compilador.programa();
      if (args[0].equals("-v")) {
      /* Mostrar total de tokens */
          TablaHash.mostrarTokensNormales();

          /* Mostrar total de identificadores */
          TablaHash.mostrarIdentificadores();
          }
          System.out.println("El fichero introducido es correcto");
        }
    catch (Exception e)
    {
       System.out.println("INCORRECTO");
       System.out.println(e.getMessage());
       Compilador.ReInit(System.in);
    }
    catch (Error e)
      {
       // Obtencion del error sintactico 
       int fila = MyNewGrammarTokenManager.input_stream.getBeginLine();
       int columna = MyNewGrammarTokenManager.input_stream.getBeginColumn();
       String tokenMalo = MyNewGrammarTokenManager.input_stream.GetImage();
       // Muestreo de los errores
       System.out.println(" ERROR LEXICO <(" + fila + " , " + columna + " >):"
                                                                                 + " simbolo no reconocido " + tokenMalo);
    }
  }

/* Construccion del analizador sintactico */

// Regla de programa
  static final public int programa() throws ParseException {
    try {
      jj_consume_token(tPROGRAMA);
      jj_consume_token(tIDENTIFICADOR);
      jj_consume_token(tPUNTYCOM);
      declaracion_variables();
      declaracion_acciones();
      bloque_sentencias();
      jj_consume_token(0);
         {if (true) return 0;}
    } catch (ParseException e) {
     errorSintactico(e);
     {if (true) return 1;}
    }
    throw new Error("Missing return statement in function");
  }

// Regla de bloque_sentencias OK
  static final public void bloque_sentencias() throws ParseException {
    try {
      jj_consume_token(tPRINCIPIO);
      lista_sentencias();
      jj_consume_token(tFIN);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de lista_sentencias OK EN DUDA
  static final public void lista_sentencias() throws ParseException {
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tSI:
        case tMQ:
        case tESCRIBIR:
        case tLEER:
        case tIDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        sentencia();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de sentencia OK
  static final public void sentencia() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tLEER:
        leer();
        jj_consume_token(tPUNTYCOM);
        break;
      case tESCRIBIR:
        escribir();
        jj_consume_token(tPUNTYCOM);
        break;
      case tIDENTIFICADOR:
        asig_invoc();
        break;
      case tSI:
        seleccion();
        break;
      case tMQ:
        mientras_que();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

  static final public void asig_invoc() throws ParseException {
    try {
      jj_consume_token(tIDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOPAS:
        asignacion();
        break;
      case tPUNTYCOM:
      case tPARENTESIS_IZDA:
        invocacion_accion();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de asignacion OK
  static final public void asignacion() throws ParseException {
    try {
      jj_consume_token(tOPAS);
      expresion();
      jj_consume_token(tPUNTYCOM);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de lista_asignables OK
  static final public void lista_asignables() throws ParseException {
    try {
      identificadores();
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de leer OK
  static final public void leer() throws ParseException {
    try {
      jj_consume_token(tLEER);
      jj_consume_token(tPARENTESIS_IZDA);
      lista_asignables();
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de escribir OK
  static final public void escribir() throws ParseException {
    try {
      jj_consume_token(tESCRIBIR);
      jj_consume_token(tPARENTESIS_IZDA);
      lista_escribibles();
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de lista_escribibles OK
  static final public void lista_escribibles() throws ParseException {
    try {
      escribible();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(tCOMA);
        escribible();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de lista_escribibles OK
  static final public void escribible() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCONSTCHAR:
        jj_consume_token(tCONSTCHAR);
        break;
      case tCONSTCAD:
        jj_consume_token(tCONSTCAD);
        break;
      case tENTACAR:
        jj_consume_token(tENTACAR);
        jj_consume_token(tPARENTESIS_IZDA);
        jj_consume_token(tCONSTANTE_NUMERICA);
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      case tIDENTIFICADOR:
        jj_consume_token(tIDENTIFICADOR);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de invocacion accion OK
  static final public void invocacion_accion() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPARENTESIS_IZDA:
        argumentos();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(tPUNTYCOM);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

//Regla de mientras que OK
  static final public void mientras_que() throws ParseException {
    try {
      jj_consume_token(tMQ);
      expresion();
      lista_sentencias();
      jj_consume_token(tFMQ);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla para los argumentos OK
  static final public void argumentos() throws ParseException {
    try {
      jj_consume_token(tPARENTESIS_IZDA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
      case tMINUS:
      case tNOT:
      case tTRUE:
      case tFALSE:
      case tENTACAR:
      case tCARAENT:
      case tCONSTCHAR:
      case tCONSTCAD:
      case tCONSTANTE_NUMERICA:
      case tIDENTIFICADOR:
      case tPARENTESIS_IZDA:
        lista_expresiones();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de lista de expresiones
  static final public void lista_expresiones() throws ParseException {
    try {
      expresion();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(tCOMA);
        expresion();
      }
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla de expresion OK
  static final public void expresion() throws ParseException {
    try {
      expresion_simple();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tMAYOR:
        case tMENOR:
        case tIGUAL:
        case tMAI:
        case tMEI:
        case tNI:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        operador_relacional();
        expresion_simple();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de operador_relacional OK
  static final public void operador_relacional() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIGUAL:
        jj_consume_token(tIGUAL);
        break;
      case tMENOR:
        jj_consume_token(tMENOR);
        break;
      case tMEI:
        jj_consume_token(tMEI);
        break;
      case tNI:
        jj_consume_token(tNI);
        break;
      case tMAI:
        jj_consume_token(tMAI);
        break;
      case tMAYOR:
        jj_consume_token(tMAYOR);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla operador aditivo OK
  static final public void operador_aditivo() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
        jj_consume_token(tPLUS);
        break;
      case tMINUS:
        jj_consume_token(tMINUS);
        break;
      case tOR:
        jj_consume_token(tOR);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        errorSintactico(e);
    }
  }

// regla de expresion simple OK
  static final public void expresion_simple() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
        jj_consume_token(tPLUS);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      termino();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPLUS:
        case tMINUS:
        case tOR:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        operador_aditivo();
        termino();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de termino OK
  static final public void termino() throws ParseException {
    try {
      factor();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tMULTIPLY:
        case tDIVIDE:
        case tAND:
        case tMOD:
        case tDIV:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        operador_multiplicativo();
        factor();
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de operador multiplicativo OK
  static final public void operador_multiplicativo() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMULTIPLY:
        jj_consume_token(tMULTIPLY);
        break;
      case tDIVIDE:
        jj_consume_token(tDIVIDE);
        break;
      case tDIV:
        jj_consume_token(tDIV);
        break;
      case tMOD:
        jj_consume_token(tMOD);
        break;
      case tAND:
        jj_consume_token(tAND);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla de factor OK
  static final public void factor() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMINUS:
        jj_consume_token(tMINUS);
        factor();
        break;
      case tNOT:
        jj_consume_token(tNOT);
        factor();
        break;
      case tPARENTESIS_IZDA:
        jj_consume_token(tPARENTESIS_IZDA);
        expresion();
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      case tENTACAR:
        jj_consume_token(tENTACAR);
        jj_consume_token(tPARENTESIS_IZDA);
        expresion();
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      case tCARAENT:
        jj_consume_token(tCARAENT);
        jj_consume_token(tPARENTESIS_IZDA);
        expresion();
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      case tIDENTIFICADOR:
        jj_consume_token(tIDENTIFICADOR);
        break;
      case tCONSTANTE_NUMERICA:
        jj_consume_token(tCONSTANTE_NUMERICA);
        break;
      case tCONSTCHAR:
        jj_consume_token(tCONSTCHAR);
        break;
      case tCONSTCAD:
        jj_consume_token(tCONSTCAD);
        break;
      case tTRUE:
        jj_consume_token(tTRUE);
        break;
      case tFALSE:
        jj_consume_token(tFALSE);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
          errorSintactico(e);
    }
  }

// Regla de seelccion OK
  static final public void seleccion() throws ParseException {
    try {
      jj_consume_token(tSI);
      expresion();
      jj_consume_token(tENT);
      lista_sentencias();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSI_NO:
        jj_consume_token(tSI_NO);
        lista_sentencias();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(tFSI);
    } catch (ParseException e) {
        errorSintactico(e);
    }
  }

// Regla de declaracion_acciones OK
  static final public void declaracion_acciones() throws ParseException {
    try {
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tACCION:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_7;
        }
        declaracion_accion();
      }
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla de declaracion_Accion OK
  static final public void declaracion_accion() throws ParseException {
    try {
      cabecera_accion();
      jj_consume_token(tPUNTYCOM);
      declaracion_variables();
      declaracion_acciones();
      bloque_sentencias();
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla de cabecera_accion OK
  static final public void cabecera_accion() throws ParseException {
    try {
      jj_consume_token(tACCION);
      jj_consume_token(tIDENTIFICADOR);
      parametros_formales();
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla de parametros formales OK
  static final public void parametros_formales() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPARENTESIS_IZDA:
        lista_parametros();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    } catch (ParseException e) {
    errorSintactico(e);
    }
  }

// Regla para lista_parametros OK
  static final public void lista_parametros() throws ParseException {
    try {
      jj_consume_token(tPARENTESIS_IZDA);
      parametros();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPUNTYCOM:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        jj_consume_token(tPUNTYCOM);
        parametros();
      }
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de parametros OK
  static final public void parametros() throws ParseException {
    try {
      clase_parametros();
      tipos_variables();
      identificadores();
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de declaracion variables OK
  static final public void declaracion_variables() throws ParseException {
    try {
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tENTERO:
        case tBOOLEANO:
        case tCARACTER:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_9;
        }
        declaracion();
        jj_consume_token(tPUNTYCOM);
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla de declaracion OK
  static final public void declaracion() throws ParseException {
    try {
      tipos_variables();
      identificadores();
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla para los identificadores OK
  static final public void identificadores() throws ParseException {
    try {
      jj_consume_token(tIDENTIFICADOR);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_10;
        }
        jj_consume_token(tCOMA);
        jj_consume_token(tIDENTIFICADOR);
      }
    } catch (ParseException e) {
     errorSintactico(e);
    }
  }

// Regla para los tipos de variables OK
  static final public void tipos_variables() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTERO:
